feat: implementa view na rota /eventos

--- a/src/views/landingPage.ejs
+++ b/src/views/landingPage.ejs
@@ -37,7 +37,7 @@
       QR Code e viva experiências únicas.
     </p>
 
-    <form action="">
+    <form action="/eventos" method="get">
       <button id="main-btn">Começar Agora!</button>
     </form>
   </main>
