--- a/src/views/eventos.ejs
+++ b/src/views/eventos.ejs
@@ -12,7 +12,7 @@
 <body>
     <h1>Eventos que estão rolando!</h1>
 
-    <a href="/eventos/xxx" class="btn-create">Criar Novo Evento</a>
+    <a href="/eventos/criar" class="btn-create">Criar Novo Evento</a>
 
     <ul class="event-list">
         <% eventos.forEach(evento => { %>
