--- a/src/public/styles/eventosStyle.css
+++ b/src/public/styles/eventosStyle.css
@@ -101,3 +101,13 @@ h1 {
   background-color: #7b5fd0;
   transform: scale(1.05);
 }
+
+.event-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.event-link:hover {
+  text-decoration: none;
+  color: inherit;
+}
