feat: adiciona e integra homepage

--- a/src/views/eventos.ejs
+++ b/src/views/eventos.ejs
@@ -29,6 +29,6 @@
     <% }) %>
   </ul>
 
-  <a href="/" class="btn-back">Voltar</a>
+  <a href="/home" class="btn-back">Voltar</a>
 </body>
 </html>
