style: padroniza landing page

--- a/src/views/landingPage.ejs
+++ b/src/views/landingPage.ejs
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>THX HUB</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/styles/landingStyle.css" />
 </head>
 <body>
@@ -33,12 +30,11 @@
     <h1 id="main-title">Minha Casa, Nosso Point.</h1>
     <p id="main-text">
       O THX Hub é a plataforma definitiva para organizar, compartilhar e curtir
-      as melhores festas com a galera. Crie eventos, envie convites por link ou
-      QR Code e viva experiências únicas.
+      as melhores festas com a galera. Crie eventos, envie convites por link ou QR Code e viva experiências únicas.
     </p>
 
     <form action="/home" method="get">
-      <button id="main-btn">Começar Agora!</button>
+      <button type="submit" class="button-main">Começar Agora!</button>
     </form>
   </main>
 
