style: atualiza homepage

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,9 +18,7 @@
       <a href="#" class="active">Início</a> 
       <a href="/eventos/criar">Criar Evento</a>
       <a href="/eventos">Meus Eventos</a>
-      <a href="#">Colaboradores</a>
-      <a href="#">Perfil</a>
-      <a href="#">Ajuda</a>
+      <a href="#">FAQ</a>
     </nav>
   </aside>
 
@@ -40,7 +38,7 @@
       </div>
       <div class="tip-card">
         <i class="fas fa-users icon"></i>
-        <p><strong>Convide amigos:</strong> Use os links personalizados para facilitar as inscrições.</p>
+        <p><strong>Convide amigos:</strong> Encontre seus besties na aba "Todos os usuários" e convide seus favs!</p>
       </div>
       <div class="tip-card">
         <i class="fas fa-bullhorn icon"></i>
@@ -59,14 +57,14 @@
         <div class="feature-box">
           <i class="fas fa-envelope-open-text feature-icon"></i>
           <h3>Gerenciar Convites</h3>
-          <p>Envie links personalizados e limite participantes.</p>
+          <p>Veja quem foi convidado e limite participantes.</p>
         </div>
       </div>
       <div class="feature-row">
         <div class="feature-box">
           <i class="fas fa-user-friends feature-icon"></i>
           <h3>Colaboradores</h3>
-          <p>Adicione amigos para ajudar na organização.</p>
+          <p>Adicione amigos para ajudar na organização. (Essa função jajá estará disponível! Fique ligado ;))</p>
         </div>
         <div class="feature-box">
           <i class="fas fa-comment-dots feature-icon"></i>
