feat: adiciona seção de FAQ

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,7 +18,7 @@
       <a href="#" class="active">Início</a> 
       <a href="/eventos/criar">Criar Evento</a>
       <a href="/eventos">Meus Eventos</a>
-      <a href="#">FAQ</a>
+      <a href="/home/FAQ">FAQ</a>
     </nav>
   </aside>
 
