--- a/src/public/styles/detalhesEvento.css
+++ b/src/public/styles/detalhesEvento.css
@@ -127,6 +127,7 @@ ul {
   background: linear-gradient(120deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 75%);
   transform: translateY(-50%) rotate(25deg);
   transition: left 0.5s ease;
+  opacity: 0.3;
 }
 
 .button:hover::after {
@@ -192,19 +193,45 @@ ul {
   padding: 0.5rem;
   border-radius: 8px;
   border: none;
-  background: #372764;
+  background-color: #372764;
   color: #fff;
+  font-size: 1rem;
   transition: all 0.4s ease;
 }
+
 .chat-form input:focus {
   outline: none;
   box-shadow: 0 0 2px #b84eff, 0 0 4px #b84eff;
-  border: 1px solid #b84eff;
-  background: #4a3089;
+  background-color: #4a3089;
 }
 
 @media (max-width: 768px) {
   .main-container {
     flex-direction: column;
   }
+}
+
+.notification {
+  visibility: hidden;
+  min-width: 250px;
+  background: linear-gradient(135deg, #9f7aea, #c684ff);
+  color: white;
+  text-align: center;
+  border-radius: 30px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1000;
+  left: 50%;
+  bottom: 30px;
+  transform: translateX(-50%) translateY(20px);
+  opacity: 0;
+  transition: all 0.5s ease;
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
+  font-weight: bold;
+}
+
+.notification.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateX(-50%) translateY(0);
 }
