style: adiciona mais detalhes ao FAQ

--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -57,10 +57,11 @@
         <h3>🔁 Atualização automática</h3>
         <p>Alguns dados exigem recarregar a página para atualizar — estamos trabalhando nisso!</p>
       </div>
-            <div class="faq-item">
-        <h3>🔁 Permissões</h3>
-        <p>No momento, qualquer pessoa pode deletar eventos e convidar pessoas, por isso é necessário manter o acesso ao site restrito até o momento.</p>
+    <div class="faq-item">
+        <h3>🔁 Por que não consigo me confirmar em um evento?</h3>
+        <p>Atenção! Apenas convidados podem realizar a confirmação. Essa validação sera explícita para os usuários na próxima atualização. Por agora, convide o usuário @matheus123 e, então, se confirme!</p>
       </div>
+      
     </section>
   </main>
 
