feat: adiciona tela de cadastro e login

--- a/src/views/landingPage.ejs
+++ b/src/views/landingPage.ejs
@@ -15,8 +15,8 @@
 
     <nav>
       <ul id="anchors" class="nav-links">
-        <li><a href="cadastro.ejs">Cadastro</a></li>
-        <li><a href="login.ejs">Login</a></li>
+        <li><a href="/cadastro">Cadastro</a></li>
+        <li><a href="/login">Login</a></li>
       </ul>
       <div id="hamburger">
         <div class="bar"></div>
