--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -91,7 +91,7 @@
       }
       
       try {
-        const response = await fetch('/api/users/login', {
+        const response = await fetch('/usuarios/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
