--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -6,6 +6,7 @@
   <title>FAQ - THX HUB</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/styles/faqStyle.css" />
+  <link rel="icon" type="image/png" href="/images/favicon.ico" /></head>
 </head>
 <body>
 
