--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js" integrity="sha512-u3fPA7s6QqZqgINuGjjxvyYJzTHb+eU3aCrdOzfsKFhFt8kWsd2SMP4pAu8Vr2VDxBjvXtEBjJvJDnYFxgFGe..." crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/styles/authStyle.css"/>
+  <link rel="icon" type="image/png" href="/images/favicon.ico" /></head>
+
 </head>
 <body>
   <div class="auth-container">
