--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/styles/authStyle.css"/>
-</head>
+  <link rel="icon" type="image/png" href="/images/favicon.ico" /></head>
 <body>
 
   <div class="auth-container">
